# UNaFIED

./: README.md  docker-compose.yml
backend/: .gitignore  TODO.md  celery_worker.py  dump.rdb  main.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 9d763026e701_add_chat_models_and_vector_extension.py  b8df12bc1066_initial_migration.py  ffeb7c90675c_add_chat_models_and_vector_extension_.py
backend/app/agents/: chat_agent.py
backend/app/api/routes/: chat.py  tools.py
backend/app/api/v1/: api.py  auth.py  users.py
backend/app/api/websockets/: auth.py  chat_ws.py  manager.py
backend/app/config/: settings.py
backend/app/core/: logger.py  redis.py  redis_pubsub.py  security.py  tools.py
backend/app/crud/: user.py
backend/app/db/: db.py
backend/app/models/: calendar.py  chats.py  token.py  user.py
backend/app/prompts/: prompt.txt
backend/app/schemas/: chat.py  participants.py  user.py
backend/app/services/: chat.py  embeddings.py  permissions.py
backend/tests/: test_auth.py  test_tools.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatInput.tsx  MessageBubble.tsx  MessageThread.tsx  SuggestionCard.tsx
frontend/src/components/layout/: ChatList.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  SignupPage.tsx
frontend/src/stores/: authStore.ts
