[project]
name = "unafied"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt==4.3.0",
    "fastapi[standard]>=0.127.0",
    "httpx>=0.27.0",
    "openai>=1.60.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.11",
    "pydantic-ai>=1.37.0",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.21",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "sqlmodel>=0.0.27",
    "redis>=5.0.0",
    "google-auth>=2.48.0",
    "oauthlib>=3.3.1",
]
